--- a/informe/AAA.tex
+++ b/informe/AAA.tex
@@ -183,36 +183,6 @@ El análisis hidráulico se desarrolló considerando dos configuraciones de oper
 \newpage
 \section{Desarrollo}
 
-\subsection{Coeficiente de Manning}
-
-Para poder obtener el coeficiente de Manning, se utilizaron los coeficientes dados en el libro \textit{Roughness Characteristics of Natural Channels} (Barnes). En él se encuentran fotografías de distintos tipos de cauces y se les asigna un coeficiente de rugosidad. A continuación, se muestran las ubicaciones que más se asemejan al cauce del río Pilmaiquén junto con su respectivo coeficiente de Manning.
-
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{c c}
-        \textbf{Ubicación} & \textbf{Coeficiente de Manning} \\
-        \hline
-        \textit{Clark Fork at St. Regis, Mont} & 0.028 \\ 
-        \textit{Columbia River at Vernita, Wash} & 0.025 \\
-        \textit{Coeur d'Alene River near Prichard, Idaho} & 0.032 \\\hline
-    \end{tabular}
-\end{table}
-
-\section{Diseño de bocatoma}
-
-El diseño de la obra de toma es una parte importante dentro del proyecto, ya que se encarga de permitir el ingreso controlado del caudal desde el río hacia el túnel de conducción. La bocatoma capta 10 m³/s mediante una compuerta lateral.
-
-En términos generales, la obra de toma se compone de tres elementos principales: la reja frontal, que cumple una función de protección; la compuerta de control, que regula el ingreso de agua y permite el cierre en caso de mantenimiento o emergencias; y el túnel de conducción, que transporta el caudal hacia la conducción principal.
-
-La toma se dispone lateralmente al cauce principal, lo que permite reducir la velocidad de aproximación y minimizar el arrastre de sedimentos. La disposición lateral facilita además el mantenimiento y limpieza, ya que el flujo que ingresa a la toma es más controlado que en una entrada frontal.
-
-En la base de la estructura se incorpora un pequeño canal de aproximación que suaviza la transición entre el flujo libre del río y el flujo dentro del túnel; este sector fue diseñado de modo que el flujo mantenga un régimen subcrítico, lo que reduce las pérdidas por turbulencia y evita cavitación.
-
-Anterior a la compuerta se ubica la reja de protección, la cual fue diseñada considerando bajas velocidades de acercamiento para evitar el arrastre de sólidos y minimizar las pérdidas de carga. El ángulo de inclinación de la reja con respecto al flujo es un factor importante, ya que facilita la autolimpieza y reduce el impacto directo del flujo, lo que prolonga la vida útil y disminuye el riesgo de obstrucción. En este caso, la inclinación elegida permite que los residuos se desplacen hacia la superficie del río, donde pueden ser retirados manual o mecánicamente. 
-
-\newpage
-\section{Resultados}
-
 A partir de los procedimientos descritos en las secciones anteriores, se obtuvieron los principales resultados hidráulicos y geométricos de la obra de captación y su sistema de compuertas. El análisis consideró las condiciones de diseño y verificación establecidas para una obra de Categoría A, según los períodos de retorno definidos de 250 y 500 años, respectivamente.
 
 \subsection{Altura crítica del flujo}
@@ -268,7 +238,33 @@ A modo de resumen, la combinación de un módulo de compuertas en concreto armad
 
 En este caso serán 4 compuertas de 5 m de ancho y 8 m de alto cada una, separadas por machones de 1 m, lo que da un ancho total efectivo de paso de 20 m. Además, el muro tendrá un largo total de 130 m, de los cuales 30 m corresponderán al módulo de compuertas en concreto y 100 m al tramo de tierra compactada.
 
-\subsection{Dimensiones de la bocatoma}
+\subsection{Coeficiente de Manning}
+
+Para poder obtener el coeficiente de Manning, se utilizaron los coeficientes dados en el libro \textit{Roughness Characteristics of Natural Channels} (Barnes). En él se encuentran fotografías de distintos tipos de cauces y se les asigna un coeficiente de rugosidad. A continuación, se muestran las ubicaciones que más se asemejan al cauce del río Pilmaiquén junto con su respectivo coeficiente de Manning.
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{c c}
+        \textbf{Ubicación} & \textbf{Coeficiente de Manning} \\
+        \hline
+        \textit{Clark Fork at St. Regis, Mont} & 0.028 \\ 
+        \textit{Columbia River at Vernita, Wash} & 0.025 \\
+        \textit{Coeur d'Alene River near Prichard, Idaho} & 0.032 \\\hline
+    \end{tabular}
+\end{table}
+
+\subsection{Diseño de bocatoma}
+
+El diseño de la obra de toma es una parte importante dentro del proyecto, ya que se encarga de permitir el ingreso controlado del caudal desde el río hacia el túnel de conducción. La bocatoma capta 10 m³/s mediante una compuerta lateral.
+
+En términos generales, la obra de toma se compone de tres elementos principales: la reja frontal, que cumple una función de protección; la compuerta de control, que regula el ingreso de agua y permite el cierre en caso de mantenimiento o emergencias; y el túnel de conducción, que transporta el caudal hacia la conducción principal.
+
+La toma se dispone lateralmente al cauce principal, lo que permite reducir la velocidad de aproximación y minimizar el arrastre de sedimentos. La disposición lateral facilita además el mantenimiento y limpieza, ya que el flujo que ingresa a la toma es más controlado que en una entrada frontal.
+
+En la base de la estructura se incorpora un pequeño canal de aproximación que suaviza la transición entre el flujo libre del río y el flujo dentro del túnel; este sector fue diseñado de modo que el flujo mantenga un régimen subcrítico, lo que reduce las pérdidas por turbulencia y evita cavitación.
+
+Anterior a la compuerta se ubica la reja de protección, la cual fue diseñada considerando bajas velocidades de acercamiento para evitar el arrastre de sólidos y minimizar las pérdidas de carga. El ángulo de inclinación de la reja con respecto al flujo es un factor importante, ya que facilita la autolimpieza y reduce el impacto directo del flujo, lo que prolonga la vida útil y disminuye el riesgo de obstrucción. En este caso, la inclinación elegida permite que los residuos se desplacen hacia la superficie del río, donde pueden ser retirados manual o mecánicamente. 
+
 
 \begin{table}[h]
     \centering
@@ -312,6 +308,9 @@ Por lo tanto, la altura útil de la reja se estima en 4,2 metros, lo que represe
 \end{table}
 
 El área frontal total de la reja es de 16 m$^2$, con un área libre efectiva de 9,6 m$^2$ considerando la porosidad del 60\%. El material propuesto es acero galvanizado de alta resistencia a la corrosión, montado sobre un marco de hormigón armado empotrado en la estructura de la toma.
+
+\newpage
+\section{Resultados}
 
 Con todos los datos se procedió a ocupar el software HEC-RAS, pero primero se ocuparon los datos topográficos del terreno para obtener los cortes transversales del río y analizar de mejor manera el terreno. Luego, se subió esta información a HEC-RAS, obteniendo lo siguiente:
 
