marco teorico manning

--- a/informe/AAA.tex
+++ b/informe/AAA.tex
@@ -180,6 +180,13 @@ De acuerdo con la normativa hidráulica nacional vigente para obras de captació
 
 El análisis hidráulico se desarrolló considerando dos configuraciones de operación de las compuertas. En la condición de diseño, se asumió que un 25\,\% de las compuertas permanece cerrada mientras el resto opera normalmente, representando la situación típica de regulación del caudal derivado hacia la planta. En la condición de verificación, en cambio, se consideró la apertura total de las compuertas, lo que permite evacuar el caudal máximo posible durante un evento extraordinario y evitar el sobrepaso del muro. La comparación de ambos escenarios permite confirmar que la obra opera en régimen estable y seguro bajo condiciones normales y de crecida, cumpliendo con las exigencias establecidas para obras hidráulicas de esta categoría.
 
+\subsection*{Coeficiente de Manning}
+
+El coeficiente de Manning, denotado como $n$, es un parámetro empírico utilizado en la ecuación de Manning para describir la resistencia al flujo en canales abiertos. Representa los efectos combinados de la rugosidad superficial, irregularidades, vegetación, alineación y variaciones en la sección transversal del canal sobre la pérdida de energía por fricción.
+
+El valor de $n$ depende del material y de las condiciones del canal; por ejemplo, canales de concreto liso presentan valores de $n$ cercanos a 0.012, mientras que cauces naturales con vegetación o irregularidades pueden tener valores superiores a 0.035.
+
+
 \newpage
 \section{Desarrollo}
 
