--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -187,7 +187,7 @@ Para poder obtener el coeficiente de Manning, se utilizaron los coeficientes dad
     \end{tabular}
 \end{table}
 
-\section{Diseño de bocatoma}
+\subsection{Diseño de bocatoma}
 El diseño de la obra de toma es una parte importante dentro del proyecto, ya que se  encarga de permitir el ingreso controlado del caudal desde el río hacia el túnel de conducción. La bocatoma capta 10 m³/s mediante una compuerta lateral.
 
 En términos generales, la obra de toma se compone de tres elementos principales: la reja frontal, que cumple una función de protección; la compuerta de control, que regula el ingreso de agua y permite el cierre en caso de mantenimiento o emergencias; y el túnel de conducción, que transporta el caudal hacia la conducción principal.
