--- a/informe/Caso2_Caprile_valenzuela_zegers.tex
+++ b/informe/Caso2_Caprile_valenzuela_zegers.tex
@@ -75,7 +75,8 @@
 %	SECCION DEL TITULO
 %----------------------------------------------------------------------------------------
 \HRule \\[0.4cm]
-{ \huge \bfseries Caso 2: Infraestructura en Recursos Hídricos}\\[0.4cm] % Titulo del documento
+{ \huge \bfseries Caso 2}\\[0.4cm]
+{ \huge \bfseries Infraestructura en recursos hídricos}\\[0.4cm] % Titulo del documento
 { \huge \bfseries Proyecto de Infraestructura Hidráulica}\\[0.4cm] % Titulo del documento
 \HRule \\[1.5cm]
  \vspace{5cm}
